--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/gochujangpork.html">Gochujang Pork Shoulder Steak</a></li>
             <li><a href="recipes/bananabread.html">Banana Bread</a></li>
+            <li><a href="recipes/shrimpscampi.html">Shrimp Scampi</a></li>
         </ul>
         
     </body>
